# Cartesi-Lido-Oracle

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  anvil_state.json  justfile
contracts/script/: Deploy.s.sol
contracts/src/: BeaconBlockRoots.sol  CartesiLidoOracle.sol  ISecondOpinionOracle.sol
crates/coprocessor-program/: Cargo.toml
crates/coprocessor-program/src/: gio.rs  main.rs
crates/io/: Cargo.toml
crates/io/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: beacon_client.rs  main.rs
crates/tower-cartesi-coprocessor/: Cargo.toml
crates/tower-cartesi-coprocessor/examples/: echo.rs
crates/tower-cartesi-coprocessor/src/: messages.rs  request.rs
