[package]
name = "dapp"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { version = "0.8.21" }
alloy-primitives = { version = "0.8.21" }
json = "0.12"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
tower-service = "0.3.3"
tower-cartesi-coprocessor = { workspace = true }
tracing = "0.1.41"
futures-util = "0.3.31"
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus.git", rev = "8fbd8a53dca0170bedeca40a92ee70fd48c4615b", default-features = false, features = ["serde"] }
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "84ef2b71aa004f6767420badb42c902ad56b8b72" }
reqwest = { version = "0.12.12", default-features = false, features = ["json"] }
anyhow = "1.0.95"
io.workspace = true
serde = "1.0.217"
hex = "0.4.3"
serde_cbor = "0.11.2"
tracing-subscriber = "0.3.19"
