[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
io = { workspace = true }

http-cache-reqwest = "0.15.1"
reqwest = { version = "0.12.12", features = ["json"] }
reqwest-middleware = "0.4.0"
serde = "1.0.217"
url = "2.5.4"

ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus.git", rev = "8fbd8a53dca0170bedeca40a92ee70fd48c4615b", default-features = false, features = ["serde"] }
ssz_rs = { git = "https://github.com/ralexstokes/ssz-rs", rev = "84ef2b71aa004f6767420badb42c902ad56b8b72" }
tokio = { version = "1.43.0", features = ["rt-multi-thread"]}
clap = { version = "4.5.28", features = ["derive", "env"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.95"
thiserror = "2.0.11"
serde_cbor = "0.11.2"
sha3 = "0.10.8"
serde_json = "1.0.138"
alloy = "0.11.1"
